@@ -1,0 +1,1 @@
+ck filter_2d_frontier math.frontier @frontier3.json --plot
