@@ -1,0 +1,13 @@
+{
+"points": [
+    {"x":1,"y":22},
+    {"x":4,"y":4}, 
+    {"x":3,"y":5}, 
+    {"x":4,"y":7}, 
+    {"x":0,"y":0}, 
+    {"x":7,"y":20},
+    {"x":8,"y":10}
+ ],
+ "frontier_keys": ["x", "y"],
+ "reverse_keys":["x", "y"]
+}
