@@ -51,7 +51,10 @@
     </div>
 
    </form>
-  
+
+   $#ck_html_end_note#$
+   <br>
+
  <script type="text/javascript">
 
    function initWidget() {
